# thermal-dual-vision

./: .dockerignore  .editorconfig  .env  .env.example  .env.test  .gitattributes  .gitignore  AGENTS.md  ASSETS.md  BACKUP_GUIDE.md  BUG_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_NOW.md  DEV_PROMPT.md  DOCKER_COMPOSE_VERIFICATION.md  DOCS.md  Dockerfile  EDGE_PROFILES.md  EVENT_NOTIFICATION_FLOW.md  EVENT_RULES.md  EVENT_SCHEMA.md  EXTERNAL_INTEGRATIONS.md  FINAL_PUSH_SUMMARY.md  FINAL_i18n_STATUS.md  FIXES.md  HA_INTEGRATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_TEST.md  INTEGRATION_VERIFICATION.md  KNOWN_ISSUES.md  LICENSE  LOCAL_TEST.md  METRICS_LOGGING.md  MQTT_OPTIONAL_TEST_RESULTS.md  NEXT_TASK.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_VERIFICATION_RESULTS.md  PERF_OBSERVABILITY.md  PHASE_10_SUMMARY.md  (+100 more)
.auto-claude/: CONTEXT.md  config.yml  requirements.txt  task_manager.py
.claude/: settings.local.json
app/: __init__.py  dependencies.py  main.py  version.py
config/: config.yaml
docker/: Dockerfile.api  Dockerfile.ui
docs/: ADVANCED_FEATURES.md  AI_MODELS.md  AI_PROMPT_EXAMPLES.md  AI_PROMPT_SPEC.md  API_AUDIT.md  API_CONTRACT.md  ARCHITECTURE.md  AUDIT_TODO_MASTER.md  CHANGELOG.md  CODE_STYLE.md  CONFIGURATION.md  CONFIG_REFERENCE.md  CPU_LOW_USAGE.md  CPU_OPTIMIZATION_ANALYSIS.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  DISK_USAGE.md  E2E_TESTS.md  ENVIRONMENT.md  EVENT_VIDEO_FIX_SPEC.md  GO2RTC_SLOW_READER.md  HA_UPDATE_BLOCKED.md  IMPLEMENTATION_STATUS.md  INFERENCE_BACKEND.md  MEDIA_SPEC.md  NOTIFICATION_SPEC.md  PERFORMANCE_TUNING.md  (+14 more)
(+374 files in other folders)
